# wigner

./: LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  module.c  pyproject.toml  setup.py  test.py  wigner_d.py
.github/workflows/: cibuildwheel.yml
c/: Makefile  README.txt  cl_to_xi.c  showdl.c  wigner.h  wigner_3j_l.c  wigner_3j_m.c  wigner_d.c  wigner_d.h  wigner_d_l.c
c/examples/: Makefile  showdl.c
docs/: conf.py  index.rst
examples/: Makefile  README.txt  cl_to_xi.c  showdl.c
include/: wigner.h
python/: README.md  module.c  setup.py  wigner.c
python/src/: wigner.c
python/wigner/: __init__.py
src/: wigner.h  wigner_3j_l.c  wigner_3jj.c  wigner_3jm.c  wigner_6j.c  wigner_d_l.c  wigner_dl.c
wigner_d/: Makefile  __init__.py
